fix: size down stars and gap on homepage

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 54px;
+    gap: 20px;
     
 }
 
